Hybrid transformer